src/objects/dfsle__Envelope__c.object
<CustomObject>
    <description>DocuSign Envelope</description>
    <fields>
        <fullName>dfsle__DocuSignId__c</fullName>
        <externalId>true</externalId>
        <label>DocuSign Envelope ID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>dfsle__EmailMessage__c</fullName>
        <description>Email Message</description>
        <inlineHelpText>Edit this email message Text (up to 2,000 characters) and it will appear in the notification to sign for
			your DocuSign Recipient.
		</inlineHelpText>
        <label>Email message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__EmailSubject__c</fullName>
        <defaultValue>&quot;Documents for your DocuSign Signature&quot;</defaultValue>
        <description>Email Subject</description>
        <inlineHelpText>Change this default email subject text and it will appear as the Subject Line in the notification to Sign
			for your DocuSign Recipients.
		</inlineHelpText>
        <label>Email subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__EnvelopeConfiguration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The configuration used to generate this envelope.</inlineHelpText>
        <label>Envelope Configuration</label>
        <referenceTo>dfsle__EnvelopeConfiguration__c</referenceTo>
        <relationshipLabel>Envelope Configuration</relationshipLabel>
        <relationshipName>EnvelopeConfiguration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dfsle__ExpireAfterDays__c</fullName>
        <description>Days before Envelope is Expired/Voided</description>
        <inlineHelpText>Indicate the number of days until this transaction is expired.</inlineHelpText>
        <label>Expire/void envelope in N day(s)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dfsle__ExpireWarnDays__c</fullName>
        <description>An email message to alert recipients that a deadline approaches for completing an envelope. This is
			sent only to recipients who have not yet completed the envelope.</description>
        <inlineHelpText>Indicate how many days prior to expiration you want an email message to alert recipients that a deadline
			approaches for completion. This is sent only to recipients who have not yet completed the transaction.
		</inlineHelpText>
        <label>Warn of expiration in N day(s) prior</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dfsle__Expires__c</fullName>
        <defaultValue>false</defaultValue>
        <description>At times, you may need to encourage your recipients to complete an envelope more rapidly. After an envelope expires, DocuSign voids the envelope and sends a notification to both sender and recipient.</description>
        <inlineHelpText>At times, you may need to encourage your recipients to complete an envelope more rapidly. After an envelope expires, DocuSign voids the envelope and sends a notification to both sender and recipient.</inlineHelpText>
        <label>Expire envelope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__Options__c</fullName>
        <label>Options</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__RemindAfterDays__c</fullName>
        <description>Reminder Interval in Days to remind them
			to review and complete the document(s).</description>
        <inlineHelpText>Indicate how many days should pass before the first reminder is sent</inlineHelpText>
        <label>Send reminder in N day(s)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dfsle__RemindFrequencyDays__c</fullName>
        <description>Reminder Repeat Interval in Days to remind them
			to review and complete the document(s).</description>
        <inlineHelpText>Indicate how often (in days) the reminder should repeat until the transaction is complete.</inlineHelpText>
        <label>Remind every N day(s) until complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dfsle__Remind__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should a reminder be sent periodically to recipients
			who have not yet completed the envelope?</description>
        <inlineHelpText>Check this box to have an email reminder sent to recipients of the envelope who have not yet completed
			their task.
		</inlineHelpText>
        <label>Remind signers via email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__SenderPermissions__c</fullName>
        <label>Sender Permissions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__Sender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The DocuSign user used for sending the envelope.</description>
        <label>Sender</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DocuSign_Envelopes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dfsle__Sent__c</fullName>
        <description>Date and time when envelope was sent</description>
        <inlineHelpText>Date and time sent</inlineHelpText>
        <label>Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dfsle__SourceId__c</fullName>
        <description>Salesforce source ID</description>
        <inlineHelpText>Salesforce source ID</inlineHelpText>
        <label>Salesforce source ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__TransactionId__c</fullName>
        <externalId>true</externalId>
        <label>Transaction ID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>dfsle__UpdateChatter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to show chatter during DocuSign signature workflow.</inlineHelpText>
        <label>Enable Chatter status updates</label>
        <type>Checkbox</type>
    </fields>
    <label>DocuSign Envelope</label>
    <listViews>
        <fullName>dfsle__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DSE-{0000000}</displayFormat>
        <label>DocuSign Envelope</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Envelopes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>